@@ -1,0 +1,9 @@
+8
++0
+1.0
+2E0
+3
+4.0000000000000
+5.0000000000001
+Inf
+nan
