@@ -1,0 +1,8 @@
+inf
+1.0
+0.50000000001
+3.333333333E-1
+0.25
+2E-1
+0
+NaN
