@@ -1,0 +1,45 @@
+\documentclass[a4paper,12pt]{article}
+
+\usepackage[scale={0.75,0.77}]{geometry}
+\usepackage[british]{babel}
+\usepackage{graphicx}
+\usepackage{wrapfig}
+\usepackage{verbatim}
+
+\begin{document}
+
+\begin{wrapfigure}[1]{r}{1cm}
+  \includegraphics[height=4cm]{../logos/DOMjudgelogo.pdf}
+\end{wrapfigure}
+~\\
+\begin{center}
+  \Large\bf \textsc{DOM}judge sample problem\\
+  \texttt{hello} -- `Hello World'
+\end{center}
+~\\
+
+\section*{Problem description}
+
+You are to write the most basic program; it should just output ``Hello
+world!'' on a single line, no matter what the input.
+
+\section*{Sample input/output}
+
+Sample input and output for this problem:
+
+~\\
+\begin{tabular}{|p{0.47\textwidth}|p{0.47\textwidth}|}
+\hline
+\textbf{Input} & \textbf{Output} \\
+\hline
+\verbatiminput{hello.in} &
+\verbatiminput{hello.out} \\
+\hline
+\end{tabular}
+
+\end{document}
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: t
+%%% End: 
